feat: adicionando html do hero

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 <body>
     <header class="header">
         <nav class="nav-left">
-            <a href="#">
-                <img src="./assets/images/icons/logo.svg" alt="Logo SyntaxWear" class="logo">
-            </a>
+            <h1>
+                <a href="#">
+                    <img src="./assets/images/icons/logo.svg" alt="Logo SyntaxWear" class="logo">
+                </a>
+            </h1>
         </nav>
         <nav class="nav-center">
             <ul class="types-nav">
@@ -39,8 +41,21 @@
                 <li><a href="#"><img src="./assets/images/icons/bag.svg" alt="icone de carrinho"></a></li>
             </ul>
         </nav>
-
     </header>
+
+    <main>
+        <section class="hero-section">
+            <div class="overlay"></div>
+            <div class="hero-content">
+                <span>Krypton One</span>
+                <h2>Transforme qualquer passo em presença.</h2>
+                <div class="hero-buttons">
+                    <a href="#" class="btn btn-outline">Ver modelos</a>
+                    <a href="#" class="btn btn-filled">Comprar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
