feat: html e css da categoria de tenis pronto

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SyntaxWear</title>
 
+    <link rel="shortcut icon" href="./assets/images/icons/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/hero.css">
+    <link rel="stylesheet" href="./assets/css/category.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,7 +41,7 @@
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#"><img src="./assets/images/icons/person.svg" alt="icone de pessoa"></a></li>
                 <li><a href="#"><img src="./assets/images/icons/question.svg" alt="icone de ajuda"></a></li>
-                <li><a href="#"><img src="./assets/images/icons/bag.svg" alt="icone de carrinho"></a></li>
+                <li><a href="#"><img src="./assets/images/icons/bag.svg" alt="icone de bolsa"></a></li>
             </ul>
         </nav>
     </header>
@@ -54,6 +56,25 @@
                     <a href="#" class="btn btn-outline">Ver modelos</a>
                     <a href="#" class="btn btn-filled">Comprar</a>
                 </div>
+            </div>
+        </section>
+
+        <section class="category-types">
+            <div class="card casual-tenis">
+                <div class="overlay"></div>
+                <a href="#" class="btn btn-outline">Casual</a>
+            </div>
+            <div class="card sport-tenis">
+                <div class="overlay"></div>
+                <a href="#" class="btn btn-outline">Esporte</a>
+            </div>
+            <div class="card modern-tenis">
+                <div class="overlay"></div>
+                <a href="#" class="btn btn-outline">Moderno</a>
+            </div>
+            <div class="card futuristic-tenis">
+                <div class="overlay"></div>
+                <a href="#" class="btn btn-outline">Futurista</a>
             </div>
         </section>
     </main>
