feat: html e css do grid prontos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/hero.css">
+    <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/category.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,6 +77,23 @@
                 <div class="overlay"></div>
                 <a href="#" class="btn btn-outline">Futurista</a>
             </div>
+        </section>
+        <section class="grid-section">
+            <div class="grid-item featured">
+                <div class="grid-content">
+                    <span>Krypton One</span>
+                    <h3>Estilo urbano com atitude</h3>
+                    <div class="buttons">
+                        <a href="#" class="btn btn-outline">Feminino</a>
+                        <a href="#" class="btn btn-outline">Masculino</a>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item highlight"></div>
+            <div class="grid-item primary"></div>
+            <div class="grid-item model"></div>
+            <div class="grid-item secondary-top"></div>
+            <div class="grid-item secondary-bottom"></div>
         </section>
     </main>
 </body>
