--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/hero.css">
     <link rel="stylesheet" href="./assets/css/grid.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/category.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -96,6 +97,67 @@
             <div class="grid-item secondary-bottom"></div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div class="contact-section">
+                <label for="email-input">Inscreva-se em nosso email</label>
+                <input type="email" name="email" id="email-input" placeholder="email@email.com">
+
+                <span>Redes sociais</span>
+                <ul>
+                    <li><a href="#"><img src="./assets/images/icons/instagram.svg" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="./assets/images/icons/whatsapp.svg" alt="WhatsApp"></a></li>
+                    <li><a href="#"><img src="./assets/images/icons/tiktok.svg" alt="Tiktok"></a></li>
+                    <li><a href="#"><img src="./assets/images/icons/facebook.svg" alt="Facebook"></a></li>
+                </ul>
+            </div>
+            <ul class="list-main">
+                <li>
+                    <ul class="types">
+                        <li class="list-title">Masculino</li>
+                        <li><a href="#">Casual</a></li>
+                        <li><a href="#">Esporte</a></li>
+                        <li><a href="#">Moderno</a></li>
+                        <li><a href="#">Futurista</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="types">
+                        <li class="list-title">Feminino</li>
+                        <li><a href="#">Casual</a></li>
+                        <li><a href="#">Esporte</a></li>
+                        <li><a href="#">Moderno</a></li>
+                        <li><a href="#">Futurista</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="types">
+                        <li class="list-title">Outlet</li>
+                        <li><a href="#">Masculino</a></li>
+                        <li><a href="#">Feminino</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="types">
+                        <li class="list-title">Nossas lojas</li>
+                        <li><a href="#">Loja física</a></li>
+                        <li><a href="#">Loja online</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="types"> 
+                        <li class="list-title">Sobre</li>
+                        <li><a href="#">Quem somos</a></li>
+                        <li><a href="#">Missão</a></li>
+                    </ul> 
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <hr class="custom">
+            <span>Copyright. All Rights Reserved</span>
+        </div>
+    </footer>
 </body>
 
 </html>
