feat: responsivo do header

--- a/index.html
+++ b/index.html
@@ -30,21 +30,29 @@
                 </a>
             </h1>
         </nav>
-        <nav class="nav-center">
-            <ul class="types-nav">
-                <li><a href="#">Masculino</a></li>
-                <li><a href="#">Feminino</a></li>
-                <li><a href="#">Outlet</a></li>
-            </ul>
-        </nav>
-        <nav class="nav-right">
-            <ul class="info-nav">
-                <li><a href="#">Nossas lojas</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#"><img src="./assets/images/icons/person.svg" alt="icone de pessoa"></a></li>
-                <li><a href="#"><img src="./assets/images/icons/question.svg" alt="icone de ajuda"></a></li>
-                <li><a href="#"><img src="./assets/images/icons/bag.svg" alt="icone de bolsa"></a></li>
-            </ul>
+        
+        <input type="checkbox" name="menu-hamburguer" class="menu-toggle" id="menu-hamburguer">
+        <label for="menu-hamburguer" class="menu-icon">
+            <img src="./assets/images/icons/menu-hamburguer.svg" alt="menu-hamburguer">
+        </label>
+
+        <nav class="nav-container">
+            <nav class="nav-center">
+                <ul class="types-nav">
+                    <li><a href="#">Masculino</a></li>
+                    <li><a href="#">Feminino</a></li>
+                    <li><a href="#">Outlet</a></li>
+                </ul>
+            </nav>
+            <nav class="nav-right">
+                <ul class="info-nav">
+                    <li><a href="#">Nossas lojas</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#"><img src="./assets/images/icons/person.svg" alt="icone de pessoa"></a></li>
+                    <li><a href="#"><img src="./assets/images/icons/question.svg" alt="icone de ajuda"></a></li>
+                    <li><a href="#"><img src="./assets/images/icons/bag.svg" alt="icone de bolsa"></a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
 
@@ -145,11 +153,11 @@
                     </ul>
                 </li>
                 <li>
-                    <ul class="types"> 
+                    <ul class="types">
                         <li class="list-title">Sobre</li>
                         <li><a href="#">Quem somos</a></li>
                         <li><a href="#">Missão</a></li>
-                    </ul> 
+                    </ul>
                 </li>
             </ul>
         </div>
